--- a/PC Car Control/My Project/Resources.resx
+++ b/PC Car Control/My Project/Resources.resx
@@ -124,4 +124,7 @@
   <data name="led-green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\led-green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Beep" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Factory Alarm Sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
